alterando o titulo principal do site

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <img src="./IMAGENS/maquiagem.png" alt="logo">
-        <h1>Makes Br. </h1>
+        <h1>Makes do Senai Barueri</h1>
         <nav>
             <ul class="nav">
                 <li><a href="Index.html">Todos os Produtos</a> </li>
